--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 table {
+    box-shadow: 5px 5px 5px #999;
     border: 10px solid goldenrod;
     border-radius: 40px;
     margin-left: auto;
@@ -9,6 +10,7 @@ table {
 
 #equal-button {
     background-color: darksalmon;
+    cursor: pointer;
 }
 
 input[type="button"] {
@@ -20,6 +22,7 @@ input[type="button"] {
     font-weight: bold;
     border: 2px solid darkgoldenrod;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 #result {
@@ -30,5 +33,6 @@ input[type="button"] {
     font-weight: bold;
     border-radius: 10px;
     border: 3px solid black;
+    
 }
 
